--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </section>
         </main>
-    </body>
 
-<script src="src/scripts/burger-menu.js"></script>
+        <script src="src/scripts/burger-menu.js" defer></script>
+    </body>
 </html>
