--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kaяclin Lab</title>
-      <link rel="stylesheet" crossorigin href="./index-BLdUsS2m.css">
+      <link rel="stylesheet" crossorigin href="./index-C8eYdsI8.css">
     </head>
     <body>
         <header class="header">
@@ -43,7 +43,7 @@
                 </div>
             </section>
         </main>
-    </body>
 
-<script src="src/scripts/burger-menu.js"></script>
+        <script src="src/scripts/burger-menu.js" defer></script>
+    </body>
 </html>
