--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             </section>
         </main>
 
-        <script src="src/scripts/burger-menu.js" defer></script>
+        <script type="module" src="src/scripts/burger-menu.js"></script>
     </body>
 </html>
