--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kaяclin Lab</title>
+      <script type="module" crossorigin src="./index-DhlA39tP.js"></script>
       <link rel="stylesheet" crossorigin href="./index-C8eYdsI8.css">
     </head>
     <body>
@@ -43,7 +44,6 @@
                 </div>
             </section>
         </main>
-
-        <script src="src/scripts/burger-menu.js" defer></script>
+
     </body>
 </html>
