--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kaяclin Lab</title>
-      <script type="module" crossorigin src="./index-DhlA39tP.js"></script>
-      <link rel="stylesheet" crossorigin href="./index-C8eYdsI8.css">
+      <script type="module" crossorigin src="./index-Dhplrqh8.js"></script>
+      <link rel="stylesheet" crossorigin href="./index-dvtiAb9W.css">
     </head>
     <body>
         <header class="header">
@@ -32,17 +32,18 @@
         <main>
             <section class="hero-section">
                 <div class="hero-section__content">
+                    <div class="hero-image">
+                        <img class="hero-section__image" src="./hero3.webp" alt="Девушка в медицинском халате" />
+                    </div>
                     <div class="hero-section__header">
                         <p class="hero-section__title">
                             Собственное производство KаясlinLAB&nbsp;&mdash; это выбор для тех, кто ценит комфорт и&nbsp;стиль в&nbsp;рабочей одежде.
                         </p>
                         <button class="hero-section__button">Открыть каталог</button>
                     </div>
-                    <div class="hero-image">
-                        <img class="hero-section__image" src="./hero.webp" alt="Девушка в медицинском халате" />
-                    </div>
                 </div>
             </section>
+            .<p></p>
         </main>
 
     </body>
