--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kaяclin Lab</title>
-      <script type="module" crossorigin src="./index-Dhplrqh8.js"></script>
-      <link rel="stylesheet" crossorigin href="./index-dvtiAb9W.css">
+      <script type="module" crossorigin src="./index-CbHQqMhx.js"></script>
+      <link rel="stylesheet" crossorigin href="./index-D8X5FSWg.css">
     </head>
     <body>
         <header class="header">
