--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-      <script type="module" crossorigin src="./index-3wtKzJuB.js"></script>
-      <link rel="stylesheet" crossorigin href="./index-m3QDUF_F.css">
+      <script type="module" crossorigin src="./index-CT99FOKL.js"></script>
+      <link rel="stylesheet" crossorigin href="./index-BV5y0dEK.css">
     </head>
     <body>
         <header class="header">
