--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-      <script type="module" crossorigin src="./index-CT99FOKL.js"></script>
-      <link rel="stylesheet" crossorigin href="./index-BV5y0dEK.css">
+      <script type="module" crossorigin src="./index-BZbO3Yqs.js"></script>
+      <link rel="stylesheet" crossorigin href="./index-Cddi26Pz.css">
     </head>
     <body>
         <header class="header">
@@ -38,7 +38,7 @@
                         <p class="hero-section__title">
                             Собственное производство KаясlinLAB&nbsp;&mdash; это выбор для тех, кто ценит комфорт и&nbsp;стиль в&nbsp;рабочей одежде.
                         </p>
-                        <button class="hero-section__button">Открыть каталог</button>
+                        <a class="hero-section__button" href="#catalog">Открыть каталог</a>
                     </div>
                 </div>
             </section>
